Adding image in home page and fixing quiz

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,7 @@
 {{ define "content" }}
-  Welcome to Vim Quiz
+  <div class="row">
+    <div class="col-md-12 pagination-centered">
+      <img src="/img/vim.png" alt="VIM" />
+    </div>
+  </div>
 {{ end }}
