Adding profile pic

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 
 {{ define "content" }}
 <div class="row">
-  <div class="col-md-4">Profile pic (Coming soon...)</div>
+  <div class="col-md-4"><img src="/img/comingsoon.jpg" /></div>
   <div class="col-md-8">
     {{ if .Profile.UserName }}
     <div class="row">
