--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+{{ define "pagetitle" }} VimQ - Home {{ end }}
+
 {{ define "content" }}
   <div class="row">
     <div class="col-md-12 pagination-centered">
