Edit question working

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       .container {
         max-width: 960px;
       }
-      #content div, span {
+      #content .text {
         font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
         font-weight: 200;
         font-size: 21px;
