--- a/templates/question.html
+++ b/templates/question.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-  <span> {{ .Question.Question }} </span><br/>
+  <span class="text"> {{ .Question.Question }} </span><br/>
   <div class="btn-group-vertical">
     {{ range .Question.Options }}
     <button type="button" class="btn btn-default answer-button" onclick="checkAnswer(this)">{{ . }}</button>
