--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,10 +27,23 @@
     {{ end }}
     {{ if len .AddedQuestions }}
       <div class="row">
-        <div class="col-md-4 text text-right">Added Questions:</div>
+        <div class="col-md-12 text text-center">Added Questions</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 text">
+      {{ range .AddedQuestions }}
+        <div>
+          <a class="btn btn-success pull-right" href="/question/{{ .QuestionId }}/edit/"><span class="glyphicon glyphicon-pencil"></span></a>
+          <span class="pull-right">&nbsp;</span>&nbsp;
+          <a class="btn btn-danger pull-right" href="/question/{{ .QuestionId }}/delete/"><span class="glyphicon glyphicon-trash"></span></a>
+        </div>
+      {{ end }}
+        </div>
         <div class="col-md-8 text">
       {{ range .AddedQuestions }}
-          <a href="/question/{{ .QuestionId }}/"> {{ .Question }} </a> <a href="/question/{{ .QuestionId }}/edit/">edit</a><br/>
+        <div>
+          <a href="/question/{{ .QuestionId }}/"> {{ .Question }} </a>
+        </div>
       {{ end }}
         </div>
       </div>
