--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,12 +31,14 @@
       </div>
       <div class="row">
         <div class="col-md-4 text">
+      {{ if shouldShowEditOptions .Profile .User }}
       {{ range .AddedQuestions }}
         <div>
           <a class="btn btn-success pull-right" href="/question/{{ .QuestionId }}/edit/"><span class="glyphicon glyphicon-pencil"></span></a>
           <span class="pull-right">&nbsp;</span>&nbsp;
           <a class="btn btn-danger pull-right" href="/question/{{ .QuestionId }}/delete/"><span class="glyphicon glyphicon-trash"></span></a>
         </div>
+      {{ end }}
       {{ end }}
         </div>
         <div class="col-md-8 text">
