Checking for username before displaying availability

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,8 +36,10 @@
           $("<div></div>").addClass("alert alert-"+type).html(alert).appendTo(alertContainer);
         });
       });
-      btn.removeClass("btn-default").addClass(data.availability ? "btn-success" : "btn-danger");
-      $("span", btn).removeClass("glyphicon-search").addClass(data.availability ? "glyphicon-ok" : "glyphicon-remove");
+      if (data.username == $("input[name='username']").val()) {
+        btn.removeClass("btn-default").addClass(data.availability ? "btn-success" : "btn-danger");
+        $("span", btn).removeClass("glyphicon-search").addClass(data.availability ? "glyphicon-ok" : "glyphicon-remove");
+      }
     }, "json");
   });
 
