--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {{ define "content" }}
   <div class="row">
     <div class="col-md-12 pagination-centered">
-      <img src="/img/vim.png" alt="VIM" />
+      <img src="/img/vimq.png" alt="VIM" />
     </div>
   </div>
 {{ end }}
