Send verification mail again

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
       #content .inlinebox {
         border: 0;
         outline: 0;
+        width: 100%;
       }
     </style>
     {{ template "css" . }}
